tac-bundle: change name and remove default 1337 sr number
Change-Id: I50c5fbd5de01858b6b43248e632d731086943886
(cherry picked from commit 8203f2ed6333b3e6d69f8874abe90f50c0ee4f82)
Signed-off-by: mcgrathc <mcgrathc@arista.com>

--- a/tac-bundle-action-pack/tac-bundle/config.yaml
+++ b/tac-bundle-action-pack/tac-bundle/config.yaml
@@ -1,6 +1,6 @@
 type: ACTION
 language: PYTHON_3
-name: TAC-Bundle
+name: TAC Bundle
 description: Gather log bundle from EOS switches for TAC troubleshooting
 file: script.py
 static-params: []
@@ -10,6 +10,6 @@ dynamic-params:
     required: true
     hidden: false
   - name: SRNumber
-    description: The TAC case number (if not specified '1337' will be used by default).
+    description: The TAC case number (if not specified no numbers will be used by default).
     required: false
     hidden: false
