actions: Add action-type to script configs
Change-Id: I0179eb238b8e8955962db24f3b6c61bd47b05b07

--- a/aboot-patch-action-pack/aboot-patch/config.yaml
+++ b/aboot-patch-action-pack/aboot-patch/config.yaml
@@ -1,4 +1,5 @@
 type: ACTION
+action-type: CHANGECONTROL_CUSTOM
 language: PYTHON_3
 name: Aboot Patch
 description: Downloads and installs the specified Aboot patch for Field Notice 044. The image can be downloaded from any server using https. If using CVP as source for the patch file, it requires that CVP has an image bundle containing that Aboot patch file in it
