--- a/force-reload-action-pack/force-reload/config.yaml
+++ b/force-reload-action-pack/force-reload/config.yaml
@@ -1,4 +1,5 @@
 type: ACTION
+action-type: CHANGECONTROL_CUSTOM
 language: PYTHON_3
 name: Force Reload
 description: Forces a device reload, and uses the devices's CVP streaming status to verify that it succeeded to reconnect and stream to CVP
