--- a/garp-on-svi-action-pack/garp-on-svi/config.yaml
+++ b/garp-on-svi-action-pack/garp-on-svi/config.yaml
@@ -1,4 +1,5 @@
 type: ACTION
+action-type: CHANGECONTROL_CUSTOM
 language: PYTHON_3
 name: GARP on SVI
 description: This action will issue a GARP from the virtual IP address configured on the provided VLAN IDs' SVIs.
