--- a/lightweight-check-mlag-health-action-pack/check-mlag-health/config.yaml
+++ b/lightweight-check-mlag-health-action-pack/check-mlag-health/config.yaml
@@ -1,4 +1,5 @@
 type: ACTION
+action-type: CHANGECONTROL_CUSTOM
 language: PYTHON_3
 name: Custom Check MLAG Health
 description: Checks that a device's MLAG ports come up in a timely manner
