--- a/push-token-action-pack/push-token/config.yaml
+++ b/push-token-action-pack/push-token/config.yaml
@@ -1,4 +1,5 @@
 type: ACTION
+action-type: CHANGECONTROL_CUSTOM
 language: PYTHON_3
 name: Push Token
 description: Downloads and puts the specified token into a file on the device
