--- a/shut-unestablished-bgp-peers-action-pack/no-shut-unestablished-bgp-peers/config.yaml
+++ b/shut-unestablished-bgp-peers-action-pack/no-shut-unestablished-bgp-peers/config.yaml
@@ -1,4 +1,5 @@
 type: ACTION
+action-type: CHANGECONTROL_CUSTOM
 language: PYTHON_3
 name: Restore Shut Unestablished BGP Peers
 description: Restores any BGP Peers shut by the Shut Unestablished BGP Peers action
