--- a/sleep-action-pack/sleep/config.yaml
+++ b/sleep-action-pack/sleep/config.yaml
@@ -1,4 +1,5 @@
 type: ACTION
+action-type: CHANGECONTROL_CUSTOM
 language: PYTHON_3
 name: Sleep
 description: Sleeps for a given duration during a Change Control
