--- a/tac-bundle-action-pack/tac-bundle/config.yaml
+++ b/tac-bundle-action-pack/tac-bundle/config.yaml
@@ -1,4 +1,5 @@
 type: ACTION
+action-type: CHANGECONTROL_CUSTOM
 language: PYTHON_3
 name: TAC Bundle
 description: Gather log bundle from EOS switches for TAC troubleshooting
