connectivity-monitor: Add argument for historical get duration
Add argument for users to control the get duration for historical data
Closes=BUG803840

Change-Id: I4b4e0b2ded57a25c807b8d7b46d57f4a52a33dfc

--- a/connectivity-monitor-action-pack/connectivity-monitor/config.yaml
+++ b/connectivity-monitor-action-pack/connectivity-monitor/config.yaml
@@ -44,3 +44,8 @@ dynamic-params:
     required: true
     hidden: false
     default: "100"
+  - name: historical_get_duration
+    description: Time duration (in seconds) to gather historical data for the given stat
+    required: true
+    hidden: false
+    default: "3600"
