--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -22,7 +22,9 @@ jobs:
         uses: softprops/action-gh-release@v0.1.15
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
-          body: "${{ env.GITHUB_REF_NAME }} compatible action packages"
+          body: |
+            Compatible action packages for the above CloudVision version.
+            These packages can be installed either through the packaging menu, or copied over to your CloudVision instance and installed with `/cvpi/tools/actionpack_cli <action pack>`
           draft: true #TODO: Toggle to false once workflow is validated
           prerelease: false
           generate_release_notes: false
