--- a/bgp-monitor-action-pack/bgp-monitor/config.yaml
+++ b/bgp-monitor-action-pack/bgp-monitor/config.yaml
@@ -15,6 +15,11 @@ dynamic-params:
     required: false
     hidden: false
     default: "False"
+  - name: check_established
+    description: True/False flag to check for and abort if any BGP peer is not "Established". Defaults to False
+    required: false
+    hidden: false
+    default: "False"
   - name: expected_difference
     description: The expected cumulative difference of BGP peers pre- and post-Change Control for the device. Positive numbers allow for adding peers, negative for retiring peers. Defaults to 0 (No difference allowed). Shutting a peer does not affect this count, as it moves to "Idle".
     required: false
