actions: add connectivity monitor action pack to bundled actions
Fixes=BUG762598

Change-Id: I19ee00643ce25c823f1b9f0b06e7761fd4eb787a

--- a/bundled.yaml
+++ b/bundled.yaml
@@ -8,4 +8,5 @@ bundled-action-packs:
     ./event-monitor-action-pack,
     ./sleep-action-pack,
     ./tac-bundle-action-pack,
+    ./connectivity-monitor-action-pack,
   ]
