connectivity-monitor: Enforce vrf and source intf have values
Currently if either vrf or source intf args are omitted by having
their default values in the UI be deleted, then when gathering
historical statistical data, it will receive no updates unless there
is a entity with their vrf/source intf being "", whichever is relevant.

Enforce that values be provided for these arguments to avoid this situation

Change-Id: I4df0efd30f2b34ac2615fd1678c34ec3e41d50c5

--- a/connectivity-monitor-action-pack/connectivity-monitor/config.yaml
+++ b/connectivity-monitor-action-pack/connectivity-monitor/config.yaml
@@ -21,12 +21,12 @@ dynamic-params:
     hidden: false
   - name: VRF
     description: The virtual routing and forwarding of the connectivity monitor probe
-    required: false
+    required: true
     hidden: false
     default: "default"
   - name: Source Interface
     description: The source interface of the connectivity monitor probe
-    required: false
+    required: true
     hidden: false
     default: "default"
   - name: Statistic
